--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
             </ul>
             </section>
             <section>
-                <div class="images">
+                <div class="images">    
                     <div class="selfie.svg">
                         <img alt="photo of woman with light brown hair and black shirt" src="assets/images/selfie.svg">
                     </div>
                     <img alt=" " src="assets/images/rainbow.png">
                 </div>
+            </section> 
+            <section> 
                 <h3 class="small">a little bit about me</h3>
                 <p>I have been doing graphic design for about two years. My current employment is designing for The Yavapai College drug and mental health deparment. I am well known for my eye catching images and intruiging designs.</p>
                 <pI was born in Prescott Arizona and have lived here my whole life. I plan on moving eventually to get a full time job as a designer.></p>
